[gd_scene load_steps=25 format=4 uid="uid://b2ufenqtjww57"]

[ext_resource type="Script" path="res://scenes/game_2d.gd" id="2_vxufa"]
[ext_resource type="Texture2D" uid="uid://b36ycphr6agf8" path="res://assets/sprites/backgrounds/2.png" id="3_8ty08"]
[ext_resource type="PackedScene" uid="uid://42alhwug45se" path="res://assets/sprites/effects/landing_effect.tscn" id="3_mtmcg"]
[ext_resource type="Texture2D" uid="uid://ilt4tlt4p5br" path="res://assets/sprites/backgrounds/3.png" id="4_5cb4v"]
[ext_resource type="Texture2D" uid="uid://22f71ghhp71p" path="res://assets/sprites/tilesets/level_tileset.png" id="5_ivqr2"]
[ext_resource type="Texture2D" uid="uid://dhhvs4ypihvts" path="res://assets/sprites/backgrounds/4.png" id="5_oroqv"]
[ext_resource type="Texture2D" uid="uid://cs7blkb2dmgx1" path="res://assets/sprites/backgrounds/5.png" id="6_jcx4i"]
[ext_resource type="Shader" path="res://assets/shaders/crt_monitor.gdshader" id="7_wm368"]
[ext_resource type="PackedScene" uid="uid://bdr7471cyc6yg" path="res://objects/interactive/wall.tscn" id="8_ejukt"]
[ext_resource type="Texture2D" uid="uid://mdj15eooh533" path="res://assets/sprites/backgrounds/1.png" id="9_837sr"]
[ext_resource type="PackedScene" uid="uid://djydnu60jaytr" path="res://objects/entity/agent/agent.tscn" id="10_xfoe6"]
[ext_resource type="Script" path="res://objects/entity/player/camera_2d.gd" id="12_58tok"]
[ext_resource type="Texture2D" uid="uid://bog3yo3sfte8i" path="res://assets/sprites/ui/button.png" id="14_fntbg"]
[ext_resource type="Script" path="res://scenes/multitouch_button.gd" id="15_3qold"]
[ext_resource type="Texture2D" uid="uid://e5igd3xupxks" path="res://assets/sprites/ui/arrow.png" id="16_ecw1p"]
[ext_resource type="PackedScene" uid="uid://in0voq6dwn6d" path="res://objects/interactive/button.tscn" id="16_v3xkd"]
[ext_resource type="PackedScene" uid="uid://de74nxses27o4" path="res://objects/interactive/spikes.tscn" id="18_l7034"]
[ext_resource type="Texture2D" uid="uid://co8fkurn0cgup" path="res://assets/sprites/ui/pc_icon.png" id="19_qh8al"]

[sub_resource type="Shader" id="Shader_1vkoe"]
code = "shader_type canvas_item;

// texture to be used as \"pixels\"
uniform sampler2D tiledtexture: repeat_enable, filter_linear_mipmap;
// how much of the tiled texture to show (1 recommended)
uniform float opacity : hint_range(0.0, 1.0);
// size of pixelation effect
uniform float pixel_size = 0.01;
// whether to greyscale the image or not before applying tiletexture
uniform bool greyscale = true;
// whether to greyscale the image or not before applying tiletexture
uniform float contrast;
// grab the camera's view
uniform sampler2D screen_texture : hint_screen_texture, filter_linear_mipmap;
// the overriding color of the tiled texture, white by default
uniform vec3 pixel_colors : source_color;
// the overriding color of the background, black by default
uniform vec3 background_color : source_color;

// Convert to Greyscale using luminosity method if aplicable
vec4 to_grayscale(vec4 color) {
	float luminance = 0.21 * color.r + 0.72 * color.g + 0.07 * color.b;
	return vec4(luminance, luminance, luminance, color.a);
}

// Adjust contrast of the greyscale image
vec4 adjust_contrast(vec4 color) {
	color.rgb = (color.rgb - 0.5) * max(contrast, 0.0) + 0.5;
	return color;
}

// Applies the tiled texture on top of the original texture imitating
// photoshop's HARD MIX blending mode
vec4 hard_mix(vec4 color1, vec4 color2) {
    vec4 result; // The resulting texture
    for (int i = 0; i < 4; i++) { // loop through the four channels
        float value = color1[i] + color2[i]; // add the values of the two colors
        if (value >= 1.0) { // if the value is greater than or equal to 1.0, set it to 1.0
            result[i] = 1.0;
        } else { // otherwise, set it to 0.0
            result[i] = 0.0;
        }
    }
    return result; // return the result color
}


// main fragment func

void fragment() {

	vec2 uv = SCREEN_UV;
	vec2 uv2 = SCREEN_UV;

	// apply pixelation on the base texture
	uv = floor(uv / pixel_size) * pixel_size;
	vec4 color1 = texture(screen_texture, uv);

	// apply greyscale adjustments if applicable
	if (greyscale) {
		color1 = to_grayscale(color1);
		color1 = adjust_contrast(color1);
	}

	// apply hard mix blending
	vec4 color2 = texture(tiledtexture, uv2 / pixel_size);
	vec4 final_result = mix(color1, hard_mix(color1, color2), opacity);

	// replace default white with desired color
	if (final_result == vec4(1.0, 1.0, 1.0, 1.0)) {
		final_result = vec4(pixel_colors, 1.0);
		// replace default black background with desired color
	} else {
		if (final_result == vec4(0.0, 0.0, 0.0, 1.0)) {
			final_result = vec4(background_color, 1.0);
		}
	}

	// assign final texture
	COLOR = final_result;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e1rq4"]
shader = SubResource("Shader_1vkoe")
shader_parameter/opacity = null
shader_parameter/pixel_size = 0.01
shader_parameter/greyscale = true
shader_parameter/contrast = null
shader_parameter/pixel_colors = null
shader_parameter/background_color = null

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3gxec"]
texture = ExtResource("5_ivqr2")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:3/0 = 0
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:3/0 = 0
7:3/0 = 0
7:4/0 = 0
8:4/0 = 0
6:4/0 = 0
6:5/0 = 0
6:6/0 = 0
7:5/0 = 0
8:5/0 = 0
8:6/0 = 0
8:7/0 = 0
7:7/0 = 0
7:6/0 = 0
6:7/0 = 0
8:8/0 = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:8/0 = 0
7:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:8/0 = 0
5:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_rtqfi"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
sources/0 = SubResource("TileSetAtlasSource_3gxec")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_duawy"]
shader = ExtResource("7_wm368")
shader_parameter/resolution = Vector2(320, 180)
shader_parameter/scan_line_amount = 1.0
shader_parameter/warp_amount = 0.1
shader_parameter/vignette_amount = 0.6
shader_parameter/vignette_intensity = 0.4
shader_parameter/grille_amount = 0.1
shader_parameter/brightness_boost = 1.2

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_cg5je"]
size = Vector2(512, 512)

[node name="Game2D" type="Node2D"]
texture_filter = 1
material = SubResource("ShaderMaterial_e1rq4")
script = ExtResource("2_vxufa")
metadata/_edit_horizontal_guides_ = [-5.0]

[node name="Parallax" type="Node2D" parent="."]
texture_filter = 1
position = Vector2(0, -160)

[node name="Parallax2D" type="Parallax2D" parent="Parallax"]
repeat_size = Vector2(576, 0)
repeat_times = 5

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Parallax2D"]
texture = ExtResource("9_837sr")

[node name="Parallax2D2" type="Parallax2D" parent="Parallax"]
scroll_scale = Vector2(1.005, 1.005)
repeat_size = Vector2(576, 0)
repeat_times = 5

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Parallax2D2"]
texture = ExtResource("3_8ty08")

[node name="Parallax2D3" type="Parallax2D" parent="Parallax"]
scroll_scale = Vector2(1.01, 1.01)
repeat_size = Vector2(576, 0)
repeat_times = 5

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Parallax2D3"]
texture = ExtResource("4_5cb4v")

[node name="Parallax2D4" type="Parallax2D" parent="Parallax"]
scroll_scale = Vector2(1.015, 1.015)
repeat_size = Vector2(576, 0)
repeat_times = 5

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Parallax2D4"]
texture = ExtResource("5_oroqv")

[node name="Parallax2D5" type="Parallax2D" parent="Parallax"]
scroll_scale = Vector2(1.02, 1.02)
repeat_size = Vector2(576, 0)
repeat_times = 5

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Parallax2D5"]
texture = ExtResource("6_jcx4i")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray("AAD9/wAAAAABAAAAAAD+/wAAAAACAAAAAAD//wAAAAABAAAAAAAAAAAAAAACAAAAAAABAAAAAAACAAAAAAACAAAAAAABAAAAAAADAAAAAAABAAAAAAACAAEAAAACAAEAAAABAAEAAAABAAIAAAAAAAEAAAABAAIAAAD//wEAAAACAAIAAAD+/wEAAAABAAEAAAD9/wEAAAABAAIAAAADAAEAAAACAAEAAAAEAAAAAAABAAAAAAAEAAEAAAABAAEAAAAFAAEAAAABAAIAAAAFAAAAAAABAAAAAAD8////AAADAAIAAAD8//7/AAADAAEAAAD8//3/AAADAAIAAAD8//z/AAADAAEAAAD8/wAAAAAEAAQAAAD6//z/AAACAAEAAAD6//3/AAACAAIAAAD6//7/AAACAAEAAAD6////AAABAAIAAAD6/wAAAAACAAEAAAD7//z/AAABAAEAAAD7//3/AAABAAEAAAD7//7/AAABAAEAAAD7////AAABAAIAAAD7/wAAAAABAAEAAAD6/wEAAAABAAEAAAD6/wIAAAABAAIAAAD7/wEAAAABAAEAAAD7/wIAAAABAAIAAAD8/wEAAAACAAEAAAD8/wIAAAACAAIAAAD9/wIAAAABAAEAAAD+/wIAAAACAAIAAAD//wIAAAABAAEAAAAAAAIAAAABAAEAAAABAAIAAAABAAIAAAACAAIAAAABAAEAAAADAAIAAAACAAEAAAAEAAIAAAACAAEAAAAFAAIAAAABAAEAAAAGAAIAAAABAAEAAAD5//z/AAACAAEAAAD5//3/AAABAAEAAAD5//7/AAACAAIAAAD5////AAACAAIAAAD5/wAAAAABAAIAAAD5/wEAAAACAAEAAAD5/wIAAAABAAEAAAD8//v/AAADAAAAAAD7//v/AAABAAAAAAD6//v/AAACAAAAAAD5//v/AAABAAAAAAAGAAMAAAACAAIAAAAGAAQAAAACAAIAAAAGAAUAAAACAAEAAAAGAAYAAAABAAEAAAAGAAcAAAACAAIAAAAGAAgAAAABAAIAAAAGAAkAAAACAAIAAAAGAAoAAAABAAEAAAAGAAsAAAACAAIAAAAHAAkAAAACAAIAAAAIAAkAAAABAAIAAAAJAAkAAAACAAIAAAAHAAMAAAACAAIAAADt//z/AAACAAEAAADt//3/AAABAAIAAADt//7/AAACAAIAAADt////AAACAAEAAADt/wAAAAACAAEAAADt/wEAAAACAAEAAADt/wIAAAACAAIAAADu//z/AAABAAEAAADu//3/AAACAAEAAADu//7/AAABAAEAAADu////AAABAAIAAADu/wAAAAABAAEAAADu/wEAAAACAAIAAADu/wIAAAACAAIAAADv//z/AAABAAIAAADv//3/AAABAAIAAADv//7/AAACAAEAAADv////AAABAAIAAADv/wAAAAABAAEAAADv/wEAAAACAAEAAADv/wIAAAACAAEAAADw//z/AAACAAIAAADw//3/AAABAAIAAADw//7/AAACAAEAAADw////AAABAAEAAADw/wAAAAABAAIAAADw/wEAAAABAAEAAADw/wIAAAACAAIAAADx//z/AAACAAEAAADx//3/AAACAAEAAADx//7/AAABAAEAAADx////AAABAAIAAADx/wAAAAACAAEAAADx/wEAAAABAAEAAADx/wIAAAABAAEAAADy//z/AAACAAIAAADy//3/AAACAAEAAADy//7/AAABAAEAAADy////AAABAAEAAADy/wAAAAABAAIAAADy/wEAAAABAAEAAADy/wIAAAACAAEAAADz//z/AAACAAEAAADz//3/AAACAAEAAADz//7/AAABAAEAAADz////AAACAAIAAADz/wAAAAACAAIAAADz/wEAAAABAAIAAADz/wIAAAACAAEAAAD0//z/AAABAAIAAAD0//3/AAABAAIAAAD0//7/AAABAAEAAAD0////AAACAAIAAAD0/wAAAAABAAIAAAD0/wEAAAACAAIAAAD0/wIAAAACAAIAAAD1//z/AAACAAIAAAD1//3/AAACAAEAAAD1//7/AAABAAIAAAD1////AAABAAIAAAD1/wAAAAACAAEAAAD1/wEAAAABAAIAAAD1/wIAAAABAAIAAAD2//z/AAABAAEAAAD2//3/AAABAAEAAAD2//7/AAACAAIAAAD2////AAABAAEAAAD2/wAAAAABAAEAAAD2/wEAAAACAAIAAAD2/wIAAAABAAEAAAD3//z/AAACAAEAAAD3//3/AAABAAIAAAD3//7/AAABAAEAAAD3////AAACAAIAAAD3/wAAAAACAAIAAAD3/wEAAAACAAIAAAD3/wIAAAACAAEAAAD4//z/AAACAAIAAAD4//3/AAABAAIAAAD4//7/AAABAAIAAAD4////AAACAAEAAAD4/wAAAAABAAEAAAD4/wEAAAABAAIAAAD4/wIAAAABAAEAAADv/wMAAAABAAEAAADv/wQAAAACAAEAAADv/wUAAAACAAIAAADv/wYAAAABAAEAAADv/wcAAAABAAIAAADv/wgAAAABAAIAAADv/wkAAAABAAIAAADv/woAAAABAAIAAADv/wsAAAABAAIAAADw/wMAAAABAAIAAADw/wQAAAACAAEAAADw/wUAAAACAAEAAADw/wYAAAACAAEAAADw/wcAAAABAAIAAADw/wgAAAACAAIAAADw/wkAAAABAAEAAADw/woAAAACAAIAAADw/wsAAAACAAEAAADx/wMAAAACAAIAAADx/wQAAAACAAEAAADx/wUAAAACAAIAAADx/wYAAAACAAIAAADx/wcAAAACAAIAAADx/wgAAAABAAIAAADx/wkAAAACAAIAAADx/woAAAACAAIAAADx/wsAAAACAAIAAADy/wMAAAACAAEAAADy/wQAAAABAAIAAADy/wUAAAABAAEAAADy/wYAAAACAAEAAADy/wcAAAACAAIAAADy/wgAAAACAAIAAADy/wkAAAACAAEAAADy/woAAAACAAIAAADy/wsAAAACAAEAAADz/wMAAAABAAEAAADz/wQAAAACAAIAAADz/wUAAAACAAEAAADz/wYAAAABAAIAAADz/wcAAAABAAEAAADz/wgAAAACAAEAAADz/wkAAAACAAEAAADz/woAAAACAAEAAADz/wsAAAABAAIAAAD0/wMAAAACAAEAAAD0/wQAAAABAAIAAAD0/wUAAAACAAEAAAD0/wYAAAACAAEAAAD0/wcAAAACAAEAAAD0/wgAAAABAAEAAAD0/wkAAAABAAIAAAD0/woAAAABAAEAAAD0/wsAAAABAAIAAAD1/wMAAAABAAIAAAD1/wQAAAACAAEAAAD1/wUAAAABAAIAAAD1/wYAAAABAAEAAAD1/wcAAAACAAIAAAD1/wgAAAACAAIAAAD1/wkAAAACAAIAAAD1/woAAAACAAIAAAD1/wsAAAACAAEAAAD2/wMAAAACAAIAAAD2/wQAAAACAAEAAAD2/wUAAAABAAEAAAD2/wYAAAACAAEAAAD2/wcAAAACAAEAAAD2/wgAAAABAAEAAAD2/wkAAAACAAEAAAD2/woAAAACAAEAAAD2/wsAAAACAAIAAAD3/wMAAAACAAIAAAD3/wQAAAACAAEAAAD3/wUAAAABAAEAAAD3/wYAAAACAAIAAAD3/wcAAAABAAEAAAD3/wgAAAABAAEAAAD3/wkAAAABAAEAAAD3/woAAAACAAEAAAD3/wsAAAABAAIAAAD4/wMAAAACAAIAAAD4/wQAAAACAAIAAAD4/wUAAAABAAIAAAD4/wYAAAACAAEAAAD4/wcAAAABAAEAAAD4/wgAAAACAAIAAAD4/wkAAAACAAIAAAD4/woAAAABAAEAAAD4/wsAAAABAAEAAAD5/wMAAAABAAIAAAD5/wQAAAACAAIAAAD5/wUAAAACAAIAAAD5/wYAAAACAAEAAAD5/wcAAAACAAIAAAD5/wgAAAABAAEAAAD5/wkAAAABAAIAAAD5/woAAAACAAEAAAD5/wsAAAACAAIAAAD6/wMAAAABAAEAAAD6/wQAAAACAAIAAAD6/wUAAAABAAEAAAD6/wYAAAACAAIAAAD6/wcAAAACAAIAAAD6/wgAAAABAAIAAAD6/wkAAAACAAIAAAD6/woAAAACAAIAAAD6/wsAAAABAAIAAAD7/wMAAAACAAIAAAD7/wQAAAABAAIAAAD7/wUAAAABAAEAAAD7/wYAAAACAAIAAAD7/wcAAAABAAIAAAD7/wgAAAABAAIAAAD7/wkAAAACAAEAAAD7/woAAAABAAEAAAD7/wsAAAACAAIAAAD8/wMAAAABAAIAAAD8/wQAAAABAAIAAAD8/wUAAAABAAIAAAD8/wYAAAABAAIAAAD8/wcAAAABAAEAAAD8/wgAAAABAAIAAAD8/wkAAAACAAEAAAD8/woAAAACAAEAAAD8/wsAAAABAAIAAAD9/wMAAAACAAEAAAD9/wQAAAACAAIAAAD9/wUAAAABAAEAAAD9/wYAAAACAAIAAAD9/wcAAAABAAEAAAD9/wgAAAACAAIAAAD9/wkAAAABAAIAAAD9/woAAAABAAIAAAD9/wsAAAABAAEAAAD+/wMAAAABAAEAAAD+/wQAAAACAAEAAAD+/wUAAAACAAEAAAD+/wYAAAABAAEAAAD+/wcAAAABAAIAAAD+/wgAAAABAAEAAAD+/wkAAAACAAEAAAD+/woAAAACAAEAAAD+/wsAAAABAAIAAAD//wMAAAABAAEAAAD//wQAAAACAAEAAAD//wUAAAACAAIAAAD//wYAAAABAAEAAAD//wcAAAABAAIAAAD//wgAAAABAAEAAAD//wkAAAACAAEAAAD//woAAAACAAEAAAD//wsAAAACAAIAAAAAAAMAAAACAAIAAAAAAAQAAAACAAEAAAAAAAUAAAABAAEAAAAAAAYAAAACAAEAAAAAAAcAAAACAAIAAAAAAAgAAAABAAEAAAAAAAkAAAACAAEAAAAAAAoAAAABAAEAAAAAAAsAAAABAAEAAAABAAMAAAABAAIAAAABAAQAAAABAAEAAAABAAUAAAABAAIAAAABAAYAAAABAAEAAAABAAcAAAACAAIAAAABAAgAAAACAAEAAAABAAkAAAACAAIAAAABAAoAAAACAAEAAAABAAsAAAABAAIAAAACAAMAAAABAAIAAAACAAQAAAACAAIAAAACAAUAAAABAAEAAAACAAYAAAABAAIAAAACAAcAAAABAAIAAAACAAgAAAACAAEAAAACAAkAAAACAAIAAAACAAoAAAABAAEAAAACAAsAAAACAAEAAAADAAMAAAACAAEAAAADAAQAAAACAAEAAAADAAUAAAACAAEAAAADAAYAAAABAAEAAAADAAcAAAABAAEAAAADAAgAAAABAAEAAAADAAkAAAACAAEAAAADAAoAAAACAAIAAAADAAsAAAABAAEAAAAEAAMAAAABAAEAAAAEAAQAAAABAAEAAAAEAAUAAAABAAEAAAAEAAYAAAACAAEAAAAEAAcAAAACAAEAAAAEAAgAAAACAAEAAAAEAAkAAAABAAEAAAAEAAoAAAACAAEAAAAEAAsAAAACAAEAAAAFAAMAAAACAAIAAAAFAAQAAAABAAIAAAAFAAUAAAABAAEAAAAFAAYAAAABAAEAAAAFAAcAAAACAAIAAAAFAAgAAAABAAIAAAAFAAkAAAABAAEAAAAFAAoAAAABAAEAAAAFAAsAAAACAAEAAADt//v/AAABAAAAAADu//v/AAACAAAAAADv//v/AAABAAAAAADw//v/AAACAAAAAADx//v/AAABAAAAAADy//v/AAABAAAAAADz//v/AAABAAAAAAD0//v/AAABAAAAAAD1//v/AAABAAAAAAD2//v/AAACAAAAAAD3//v/AAACAAAAAAD4//v/AAABAAAAAAAJAAIAAAACAAEAAAAKAAEAAAABAAIAAAALAAAAAAACAAAAAAAHAAIAAAABAAEAAAAIAAIAAAABAAIAAAAJAAAAAAACAAAAAAAJAAEAAAABAAEAAAAKAAAAAAABAAAAAAAIAAMAAAACAAEAAAAJAAMAAAABAAIAAAAHAAQAAAACAAIAAAAHAAUAAAABAAIAAAAHAAYAAAABAAEAAAAHAAcAAAACAAEAAAAHAAgAAAACAAIAAAAIAAQAAAACAAEAAAAIAAUAAAABAAIAAAAIAAYAAAABAAEAAAAIAAcAAAACAAIAAAAIAAgAAAACAAEAAAAJAAQAAAACAAIAAAAJAAUAAAABAAEAAAAJAAYAAAABAAEAAAAJAAcAAAABAAEAAAAJAAgAAAABAAIAAAAHAAoAAAACAAEAAAAHAAsAAAACAAIAAAAIAAoAAAABAAEAAAAIAAsAAAABAAEAAAAJAAoAAAABAAEAAAAJAAsAAAACAAEAAAAKAAcAAAABAAIAAAAKAAgAAAABAAIAAAAKAAkAAAABAAEAAAAKAAoAAAABAAEAAAAKAAsAAAABAAIAAAAKAAIAAAABAAEAAAAKAAMAAAACAAEAAAAKAAQAAAABAAEAAAAKAAUAAAABAAIAAAAKAAYAAAABAAIAAAAMAAAAAAACAAAAAAAMAAEAAAACAAEAAAAMAAIAAAACAAIAAAANAAAAAAABAAAAAAANAAEAAAACAAEAAAANAAIAAAACAAEAAAAOAAAAAAABAAAAAAAOAAEAAAACAAIAAAAOAAIAAAACAAIAAAAPAAEAAAABAAIAAAAPAAIAAAABAAEAAAALAAEAAAACAAIAAAALAAIAAAACAAEAAAALAAMAAAABAAIAAAALAAQAAAABAAIAAAAMAAMAAAABAAIAAAAMAAQAAAABAAIAAAALAAUAAAABAAEAAAALAAYAAAACAAIAAAALAAcAAAACAAIAAAALAAgAAAABAAEAAAAMAAUAAAACAAEAAAAMAAYAAAABAAIAAAAMAAcAAAACAAEAAAAMAAgAAAACAAIAAAANAAMAAAACAAIAAAANAAQAAAACAAEAAAANAAUAAAABAAEAAAANAAYAAAACAAEAAAANAAcAAAABAAIAAAANAAgAAAACAAEAAAAOAAMAAAABAAIAAAAOAAQAAAACAAEAAAAOAAUAAAABAAEAAAAOAAYAAAACAAEAAAAOAAcAAAABAAEAAAAOAAgAAAACAAIAAAAPAAMAAAABAAIAAAAPAAQAAAABAAEAAAAPAAUAAAABAAEAAAAPAAYAAAACAAEAAAAPAAcAAAABAAEAAAAPAAgAAAACAAIAAAALAAkAAAACAAEAAAALAAoAAAACAAIAAAALAAsAAAABAAIAAAAMAAkAAAACAAIAAAAMAAoAAAABAAEAAAAMAAsAAAACAAEAAAANAAkAAAACAAIAAAANAAoAAAABAAIAAAANAAsAAAACAAIAAAAOAAkAAAACAAEAAAAOAAoAAAABAAEAAAAOAAsAAAACAAIAAAAPAAkAAAABAAEAAAAPAAoAAAABAAIAAAAPAAsAAAABAAIAAAAPAAAAAAABAAAAAAD9//v/AAABAAMAAAD+//v/AAABAAMAAAD///v/AAABAAMAAAAAAPv/AAABAAMAAAABAPv/AAABAAMAAAACAPv/AAABAAMAAAADAPv/AAABAAMAAAAEAPv/AAABAAMAAAAFAPv/AAABAAMAAAA=")
tile_set = SubResource("TileSet_rtqfi")

[node name="Objects" type="Node2D" parent="."]

[node name="Button" parent="Objects" node_paths=PackedStringArray("interactive_objects") instance=ExtResource("16_v3xkd")]
position = Vector2(56, 0)
interactive_objects = [NodePath("../Wall"), NodePath("../Wall2"), NodePath("../Wall3")]

[node name="Wall" parent="Objects" instance=ExtResource("8_ejukt")]
position = Vector2(208, 4)
rotation = 1.5708

[node name="Wall2" parent="Objects" instance=ExtResource("8_ejukt")]
position = Vector2(240, 4)
rotation = 1.5708

[node name="Wall3" parent="Objects" instance=ExtResource("8_ejukt")]
position = Vector2(272, 4)
rotation = 1.5708

[node name="Agent" parent="Objects" instance=ExtResource("10_xfoe6")]
position = Vector2(232, -32)
position_x1 = 96.0
position_x2 = 232.0

[node name="LandingEffect" parent="." instance=ExtResource("3_mtmcg")]
unique_name_in_owner = true
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -16)
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("12_58tok")

[node name="MonitorEffect" type="TextureRect" parent="Camera2D"]
visible = false
z_index = 1
material = SubResource("ShaderMaterial_duawy")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_cg5je")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="UI" type="Control" parent="CanvasLayer"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="2DControls" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="LeftButton" type="TextureButton" parent="CanvasLayer/UI/2DControls"]
texture_filter = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -192.0
offset_right = 224.0
offset_bottom = -32.0
grow_vertical = 0
texture_normal = ExtResource("14_fntbg")
texture_pressed = ExtResource("14_fntbg")
stretch_mode = 0
script = ExtResource("15_3qold")
action = "left"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/2DControls/LeftButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 160.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
rotation = 4.71239
texture = ExtResource("16_ecw1p")

[node name="RightButton" type="TextureButton" parent="CanvasLayer/UI/2DControls"]
texture_filter = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 240.0
offset_top = -192.0
offset_right = 400.0
offset_bottom = -32.0
grow_vertical = 0
texture_normal = ExtResource("14_fntbg")
texture_pressed = ExtResource("14_fntbg")
stretch_mode = 0
script = ExtResource("15_3qold")
action = "right"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/2DControls/RightButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 160.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
texture = ExtResource("16_ecw1p")

[node name="JumpButton" type="TextureButton" parent="CanvasLayer/UI/2DControls"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -192.0
offset_right = -64.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("14_fntbg")
texture_pressed = ExtResource("14_fntbg")
stretch_mode = 0
script = ExtResource("15_3qold")
action = "jump"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/2DControls/JumpButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_ecw1p")

[node name="GoToHackingButton" type="TextureButton" parent="CanvasLayer/UI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -224.0
offset_top = 40.0
offset_right = -64.0
offset_bottom = 200.0
grow_horizontal = 0
focus_mode = 0
texture_normal = ExtResource("14_fntbg")
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/GoToHackingButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("19_qh8al")

[node name="Spikes" parent="." instance=ExtResource("18_l7034")]
position = Vector2(208, 48)

[node name="Spikes2" parent="." instance=ExtResource("18_l7034")]
position = Vector2(240, 48)

[node name="Spikes3" parent="." instance=ExtResource("18_l7034")]
position = Vector2(272, 48)
